--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 Flask==3.0.3
-tensorflow==2.10.0
-Pillow==8.3.1
-numpy==1.22.3
 flask-cors==3.0.10
+gunicorn
+h5py==3.11.0
+keras==3.5.0
+numpy==1.26.4
+pillow==10.4.0
+protobuf==4.25.5
+requests==2.32.3
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+urllib3==2.2.3
+Werkzeug==3.0.4
