--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-Flask==3.0.3
-flask-cors==3.0.10
+Flask==2.1.2
+Flask-Cors==5.0.0
 gunicorn
 h5py==3.11.0
-keras==3.5.0
+keras==2.10.0
 numpy==1.26.4
 pillow==10.4.0
 protobuf==4.25.5
 requests==2.32.3
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-hub==0.12.0
+tensorflow-io-gcs-filesystem==0.27.0
 urllib3==2.2.3
 Werkzeug==3.0.4
