--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 Flask==2.1.2
 Flask-Cors==5.0.0
 gunicorn
-h5py==3.11.0
 keras==2.10.0
-numpy==1.26.4
-pillow==10.4.0
+numpy==1.22.3
+Pillow==9.2.0
 protobuf==3.19.5
 requests==2.32.3
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
+tensorboard==2.10.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 tensorflow==2.10.0
 tensorflow-estimator==2.10.0
 tensorflow-hub==0.12.0
 tensorflow-io-gcs-filesystem==0.27.0
-urllib3==2.2.3
-Werkzeug==3.0.4
+urllib3==1.26.9
